<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E91E63">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/DateLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/please_enter_year_of_brith"
            android:textColor="#000000" />

        <EditText
            android:id="@+id/date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:autofillHints=""
            android:ems="10"
            android:inputType="date"
            android:paddingTop="50sp"
            tools:ignore="SpeakableTextPresentCheck" />

        <Button
            android:id="@+id/calucate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="150sp"
            android:layout_marginTop="450sp"
            android:layout_marginRight="150sp"
            android:background="#00BCD4"
            android:text="@string/sumbit" />

        <TextView
            android:id="@+id/answer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="150sp"
            android:layout_marginTop="300sp"
            android:layout_marginRight="150sp"
            android:text="@string/your_age_is"
            android:textColor="#000000" />
    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
